--- a/README.textile
+++ b/README.textile
@@ -1,9 +1,10 @@
-h1. Bio Brew
+h1. Bitter Brew
 
-Simple package manager for bioinformatic tools.
+Simple package manager for cool tools.
 Fork of "drio's biobrew":https://github.com/drio/bio.brew with some slight architecture changes.
 
-Allows you to write _recipes_ that describe how to install your favorite bioinfo tool. Once a recipe is written, you can install it simply with:
+Allows you to write _recipes_ that describe how to install your favorite tool. Recipes are written in bash.
+Once a recipe is written, you can install it simply with:
 
 <pre>
 bb install tool
@@ -15,17 +16,17 @@ Have a feature request? Want a new recipe? "Create an Issue":https://github.com/
 
 h2. Creating a Recipe
 
-See "bio.brew's example recipe":https://github.com/vlandham/bio.brew/blob/master/recipes/example.sh to get a feel for how a recipe should look. 
+See "bitter.brew's example recipe":https://github.com/vlandham/bio.brew/blob/master/recipes/example.sh to get a feel for how a recipe should look. 
 
 In practice, a new recipe will usually start as a copy of an existing recipe tweaked to work.
 
 h2. Install
 
-There are a few ways to install and configure bio.brew. My (current) preferred method involves *checking out the source from github using git* and then using the *bb_load_env* setup as detailed below. The requirement for this method is of course that you need git installed on your system.
+There are a few ways to install and configure bitter.brew. My (current) preferred method involves *checking out the source from github using git* and then using the *bb_load_env* setup as detailed below. The requirement for this method is of course that you need git installed on your system.
 
 h3. Install with git
 
-git clone git://github.com/vlandham/bio.brew.git
+git clone git://github.com/Nordstrom/bitter.brew.git
 
 h2. Installation Configuration
 
@@ -33,15 +34,15 @@ h3. Minimum Configuration
 
 At a minimum, you should define the @BB_PATH@ and @BB_INSTALL@ environmental variables and add @$BB_INSTALL/bin@ and @$BB_PATH/bin@ to your @PATH@. 
 
-@BB_PATH@ defines the *location of the bio.brew package*, while @BB_INSTALL@ tells bio.brew *where to install tools*.
+@BB_PATH@ defines the *location of the bitter.brew package*, while @BB_INSTALL@ tells bitter.brew *where to install tools*.
 
-This will add the bb executable to your path as well as binaries created using bio.brew. Just adding these variables will *not* add the recipe specific ENV variables to your path (see below).
+This will add the bb executable to your path as well as binaries created using bitter.brew. Just adding these variables will *not* add the recipe specific ENV variables to your path (see below).
 
-Here is an example setup for basic bio.brew Brew use. This example assumes you have the bio.brew tool downloaded to the directory: @/home/username/bio.brew@ and want bio.brew to install tools at @/home/username/tools@
+Here is an example setup for basic bitter.brew Brew use. This example assumes you have the bio.brew tool downloaded to the directory: @/home/username/bio.brew@ and want bio.brew to install tools at @/home/username/tools@
 
 <pre>
 export BB_INSTALL=/home/username/tools
-export BB_PATH=/home/username/tools/bio.brew
+export BB_PATH=/home/username/tools/bitter.brew
 export PATH="$BB_INSTALL/bin:$BB_PATH/bin:$PATH"
 </pre>
 
@@ -65,7 +66,7 @@ h2. Using bio.brew
 
 h3. Installing a new recipe
 
-Here we use bio.brew to install samtools. The -j8 is passed to make when compiling
+Here we use bitter.brew to install samtools. The -j8 is passed to make when compiling
 
 <pre>
 bb list
@@ -116,11 +117,11 @@ h2. Recipe Troubles
 
 So you write a recipe, you forget some step, and now things are messed up. What do you do?
 
-Recipe creation is an iterative process. Usually you won't get it completely right the first time. In the future, we hope to make @bio.brew@ more accommodating to this process. For now, there are a few things you can do.
+Recipe creation is an iterative process. Usually you won't get it completely right the first time. In the future, we hope to make @bitter.brew@ more accommodating to this process. For now, there are a few things you can do.
 
 h4. Run bb clean <tool>
 
-If @bio.brew@ dies during one of its steps, it could leave behind lock files that might prevent running the installation process again.
+If @bitter.brew@ dies during one of its steps, it could leave behind lock files that might prevent running the installation process again.
 
 To get rid of these, run @bb clean@ like so:
 
@@ -128,7 +129,7 @@ To get rid of these, run @bb clean@ like so:
 bb clean picard
 </pre>
 
-This will remove the meta files @bio.brew@ creates, allowing you to re-run the recipe (after you've fixed the problem).
+This will remove the meta files @bitter.brew@ creates, allowing you to re-run the recipe (after you've fixed the problem).
 
 h4. Check the log files
 
@@ -136,7 +137,7 @@ To see what when wrong, check the installation log files. These should be in the
 
 h4. Add logging to your recipe
 
-@bio.brew@ comes with a handy @log@ helper, which you can use to echo out relevant information during the installation of your recipe
+@bitter.brew@ comes with a handy @log@ helper, which you can use to echo out relevant information during the installation of your recipe
 
 <pre>
 log "performing some command now"
@@ -150,39 +151,39 @@ If something goes really wrong, you might have to dig down and remove files manu
 
 Remember: recipes are just bash scripts. There are no inherent restrictions on what you put in them. Please recipe responsibly. 
 
-h2. How I Use bio.brew
+h2. How I Use bitter.brew
 
-As an example setup, here is how I've installed and setup bio.brew on OSX 10.5.8. Setup should be very similar for other versions of OS X as well as Linux distributions.
+As an example setup, here is how I've installed and setup bitter.brew on OSX 10.5.8. Setup should be very similar for other versions of OS X as well as Linux distributions.
 
-First, I created a @tools@ directory in my home directory and cloned the bio.brew repo there:
+First, I created a @tools@ directory in my home directory and cloned the bitter.brew repo there:
 
 <pre>
 mkdir ~/tools
 cd ~/tools
-git clone git@github.com:vlandham/bio.brew.git
+git clone git@github.com:Nordstrom/bitter.brew.git
 </pre>
 
 Then I added the following to my @.bashrc@ file:
 
 <pre>
 export BB_INSTALL=~/tools
-export BB_PATH=~/tools/bio.brew
+export BB_PATH=~/tools/bitter.brew
 PATH="$BB_INSTALL/bin:$BB_PATH/bin:$PATH"
 export PATH
 
-[[ -s "$BB_INSTALL/bio.brew/bb_load_env" ]] && source "$BB_INSTALL/bio.brew/bb_load_env"
+[[ -s "$BB_INSTALL/bitter.brew/bb_load_env" ]] && source "$BB_INSTALL/bitter.brew/bb_load_env"
 </pre>
 
-This indicates that all my bio.brew recipes will be installed in the @bin@ directory under @~/tools@
+This indicates that all my bitter.brew recipes will be installed in the @bin@ directory under @~/tools@
 
-As I manage java, subversion, and other packages externally of bio.brew, I first fake these inside of bio.brew to satisfy dependencies
+As I manage java, subversion, and other packages externally of bitter.brew, I first fake these inside of bitter.brew to satisfy dependencies
 
 <pre>
 bb fake java
 bb fake svn
 </pre>
 
-Now I'm ready to use bio.brew to install and manage my bioinformatic packages!
+Now I'm ready to use bitter.brew to install and manage my bioinformatic packages!
 
 <pre>
 bb install bowtie
@@ -201,13 +202,14 @@ Imagine you get access to a new linux box or HPC cluster. You want to start doin
 
 BB (biobrew) helps you either way. With a simple oneliner you can have most of your tools ready to use.  BB is a tiny package manager based entirely in bash. It makes the extension of recipes (package definitions) very easy. 
 
-BB currently works in Linux enviroments (it should work just fine in other flavours of Unix). It only needs a typical Linux enviroment with gcc, curl (and potentially git). Besides classic and inseparable unix tools, bio.brew's focus is on bioinformatic tools and packages. 
+BB currently works in Linux enviroments (it should work just fine in other flavours of Unix). It only needs a typical Linux enviroment with gcc, curl (and potentially git). Besides classic and inseparable unix tools, bitter.brew's focus is on bioinformatic tools and packages. 
 
-bio.brew has a similar feel to it as the "homebrew":https://github.com/mxcl/homebrew package manager for Mac OSX. The difference being that it is much more lean in terms of functionality and packages provided, it is written entirely in shell instead of a mixture of shell and ruby, it works on more than just Mac OSX, and its focus is only on core bioinformatic tools.
+bitter.brew has a similar feel to it as the "homebrew":https://github.com/mxcl/homebrew package manager for Mac OSX. But it isn't as good.
+The difference being that it is much more lean in terms of functionality and packages provided, it is written entirely in shell instead of a mixture of shell and ruby, it works on more than just Mac OSX, and its focus is only on core bioinformatic tools.
 
 Give it a try and make it better by improving the framework and adding more recipes.
 
-h2. Differences from Original bio.brew
+h2. Differences from Original bitter.brew
 
 * The recipe seed name is a more fundamental part of the system architecture now. Recipes are defined by the combination of the recipe name as well as the seed name. In effect, the *recipe name* describes a *tool* and the *seed name* indicates a specific *version* of that tool.
 * The above architecture allows and encourages keeping multiple versions (seeds) of a tool around but having only one version *active* at a particular time. 
